<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/singin_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        android:orientation="vertical"
        android:padding="16dp"
        android:contextClickable="true"
        tools:context="presentation.authentication.AuthenticationFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SingFragmentButton"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegistrationFragmentButton"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registration" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/WriteToUsFragmentButton"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/write_to_us" />

    </LinearLayout>
