<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="presentation.authentication.SingInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        android:orientation="vertical"
        android:padding="16dp"
        android:contextClickable="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SingInUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SingInPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SingInSingIn"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SingInForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            android:text="@string/forgot_password"
            android:backgroundTint="@color/teal_200"
            android:backgroundTintMode="src_over"
            android:layout_marginTop="8dp"
            android:textColor="@color/teal_700"/>



    </LinearLayout>
    </FrameLayout>
</layout>
